--- a/Tyuiu.GrigorevKU.Sprint7.Project.V4/Tyuiu.GrigorevKU.Sprint7.Project.V4.csproj
+++ b/Tyuiu.GrigorevKU.Sprint7.Project.V4/Tyuiu.GrigorevKU.Sprint7.Project.V4.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormEditBook.Designer.cs">
       <DependentUpon>FormEditBook.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormEditUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEditUser.Designer.cs">
+      <DependentUpon>FormEditUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,12 @@
     <Compile Include="FormSearchBook.Designer.cs">
       <DependentUpon>FormSearchBook.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSearchUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSearchUser.Designer.cs">
+      <DependentUpon>FormSearchUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAddBook.resx">
@@ -87,11 +99,17 @@
     <EmbeddedResource Include="FormEditBook.resx">
       <DependentUpon>FormEditBook.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormEditUser.resx">
+      <DependentUpon>FormEditUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSearchBook.resx">
       <DependentUpon>FormSearchBook.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSearchUser.resx">
+      <DependentUpon>FormSearchUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
